[gd_scene load_steps=5 format=2]

[ext_resource path="res://GUI/Quickbar.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/InventoryWindow.gd" type="Script" id=2]
[ext_resource path="res://GUI/InventoryBar.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.14407, 0.141083, 0.523438, 1 )

[node name="InventoryWindow" type="CenterContainer"]
mouse_filter = 2
use_top_left = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = -358.0
margin_top = -174.0
margin_right = 357.0
margin_bottom = 173.0
rect_min_size = Vector2( 715, 0 )
mouse_filter = 2
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowBack" type="PanelContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 690.0
margin_bottom = 322.0
mouse_filter = 1
custom_styles/panel = SubResource( 1 )

[node name="Window" type="MarginContainer" parent="MarginContainer/WindowBack"]
margin_right = 665.0
margin_bottom = 297.0
mouse_filter = 1
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="Inventories" type="VBoxContainer" parent="MarginContainer/WindowBack/Window"]
margin_top = 20.0
margin_right = 665.0
margin_bottom = 277.0
custom_constants/separation = 10
alignment = 1

[node name="Inventory1" parent="MarginContainer/WindowBack/Window/Inventories" instance=ExtResource( 4 )]

[node name="Inventory2" parent="MarginContainer/WindowBack/Window/Inventories" instance=ExtResource( 4 )]
margin_top = 60.0
margin_bottom = 110.0

[node name="Inventory3" parent="MarginContainer/WindowBack/Window/Inventories" instance=ExtResource( 4 )]
margin_top = 120.0
margin_bottom = 170.0

[node name="Quickbar" parent="MarginContainer/WindowBack/Window/Inventories" instance=ExtResource( 1 )]
margin_top = 180.0
margin_bottom = 257.0
[connection signal="quickbar_changed" from="MarginContainer/WindowBack/Window/Inventories/Quickbar" to="." method="_on_Quickbar_quickbar_changed"]
